# Med_Matrix

./: .env.example  .gitignore  PhantomNet_multiclass600(1).ipynb  README.md  docker-compose.yml  fused_model_128.pt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  radiology_report_template.html  test_kspace.npy
ai-service/: .dockerignore  Dockerfile  README.md  anomaly_detector.pt  anomaly_detector_model.py  artifact_detector.py  cnn_model.py  create_demo_patient.py  denoiser.py  evaluate_onnx.py  export_fused_onnx.py  export_onnx.py  find_max_batch.py  fused_model.py  fused_model_onnx.py  generate_5_patients.py  generate_synthetic_dataset.py  kspace_reader.py  main.py  models.py  motion_correction.py  pre_reconstruct_dataset.py  python_sim.py  reconstruction.py  requirements.txt  s4_model.py  test_artifact_detector.py  test_pipeline.py  test_reconstruction.py  train.py  train_anomaly_detector.py  verify_model.py
ai-service/inference/: CMakeLists.txt  README.md  anomaly_detector_inference.cpp  anomaly_detector_inference.h  kvision_inference.cpp  kvision_inference.h  test_anomaly_detector_inference.cpp  test_inference.cpp
ai-service/rag_agent/: __init__.py  cache.py  config.py  gemini_client.py  ingest.py  query.py  store.py
apps/backend/: .env.example  Dockerfile.dev  README.md  package.json  tsconfig.json
apps/backend/prisma/: schema.prisma
apps/backend/prisma/migrations/20260615201639_init/: migration.sql
apps/backend/prisma/migrations/20260616182417_add_dicom_key/: migration.sql
apps/backend/prisma/migrations/20260618152016_phase2_ai_model_tables/: migration.sql
apps/backend/src/: ai-client.ts  clear_db.ts  dcmjs.d.ts  dicom.ts  index.ts  queue.ts  storage.ts  test-queue.ts  worker.ts
apps/backend/src/routes/: studies.ts
apps/electron/: .npmrc  README.md  electron.vite.config.ts  package.json  tsconfig.main.json  vite.config.ts
apps/electron/src/main/: index.ts
apps/electron/src/preload/: index.ts
apps/electron/src/renderer/: App.tsx  index.css  index.html
apps/electron/src/renderer/public/brain2print/: index.html
apps/electron/src/renderer/public/brain2print/assets/: index-B4xvmLrE.js
data/: AVM.md  Atrophy.md  Cerebral_Cyst.md  Cerebral_Microbleeds.md  Edema.md  Hemorrhage.md  Hydrocephalus.md  Ischemia.md  MS_Lesions.md  Normal.md  Tumor_Glioma.md
rust-mri/: Cargo.toml  README.md
rust-mri/src/: main.rs
second-brain/: README.md  index.md
second-brain/.obsidian/: workspace.json
second-brain/attempts/: phase_1_jemin.md  phase_2_gating_logic.md  phase_3_training_and_cpp.md  phase_4_ssm_anomaly_integration.md  template.md
second-brain/memories/: architecture.md  inference.md  radiology_agent_rag.md
